--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,7 +5,8 @@
  *= require themify
  *= require theme
  *= require venobox
- *= require ./share/spacing
+ *= require ./shared/spacing
+ *= require ./shared/notification
  *= require font-awesome
  */
 
