--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer class="bg-dark">
-  <span>COPYRIGHT © 2018 <%= @footer_site_name %> ALL RIGHT RESERVED.</span>
+  <span>COPYRIGHT © <%= Date.today.year.to_s %> <%= @footer_site_name %> ALL RIGHT RESERVED.</span>
 </footer>
